SRE-2976 - adding script to give detailed message for modsec alerts

--- a/spinner/resources/webserver/modsec/modsecurity.conf
+++ b/spinner/resources/webserver/modsec/modsecurity.conf
@@ -250,8 +250,8 @@ SecAuditLogParts AHZ
 # assumes that you will use the audit log only ocassionally.
 #
 SecAuditLogType Serial
-# SecAuditLog /var/log/modsec_audit.log
-SecAuditLog /dev/stdout
+SecAuditLog /var/log/modsec_audit.log
+# SecAuditLog /dev/stdout
 
 SecAuditLogFormat JSON
 
